--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section class="reviews">
           <article class="reviews__card">
             <div class="reviews__stars">
-              <img src="/images/icon-star.svg" alt="" class="reviews__star">
+              <img src="images/icon-star.svg" alt="" class="reviews__star">
               <img src="/images/icon-star.svg" alt="" class="reviews__star">
               <img src="/images/icon-star.svg" alt="" class="reviews__star">
               <img src="/images/icon-star.svg" alt="" class="reviews__star">
