Fixing image not appearing in GitHub Pages

--- a/index.html
+++ b/index.html
@@ -39,32 +39,32 @@
           <article class="reviews__card">
             <div class="reviews__stars">
               <img src="images/icon-star.svg" alt="" class="reviews__star">
-              <img src="/images/icon-star.svg" alt="" class="reviews__star">
-              <img src="/images/icon-star.svg" alt="" class="reviews__star">
-              <img src="/images/icon-star.svg" alt="" class="reviews__star">
-              <img src="/images/icon-star.svg" alt="" class="reviews__star">
+              <img src="images/icon-star.svg" alt="" class="reviews__star">
+              <img src="images/icon-star.svg" alt="" class="reviews__star">
+              <img src="images/icon-star.svg" alt="" class="reviews__star">
+              <img src="images/icon-star.svg" alt="" class="reviews__star">
             </div>
             <p class="reviews__text">Rated 5 Stars in Reviews</p>
           </article>
 
           <article class="reviews__card">
             <div class="reviews__stars">
-              <img src="/images/icon-star.svg" alt="" class="reviews__star">
-              <img src="/images/icon-star.svg" alt="" class="reviews__star">
-              <img src="/images/icon-star.svg" alt="" class="reviews__star">
-              <img src="/images/icon-star.svg" alt="" class="reviews__star">
-              <img src="/images/icon-star.svg" alt="" class="reviews__star">
+              <img src="images/icon-star.svg" alt="" class="reviews__star">
+              <img src="images/icon-star.svg" alt="" class="reviews__star">
+              <img src="images/icon-star.svg" alt="" class="reviews__star">
+              <img src="images/icon-star.svg" alt="" class="reviews__star">
+              <img src="images/icon-star.svg" alt="" class="reviews__star">
             </div>
             <p class="reviews__text">Rated 5 Stars in Report Guru</p>
           </article>
 
           <article class="reviews__card">
             <div class="reviews__stars">
-              <img src="/images/icon-star.svg" alt="" class="reviews__star">
-              <img src="/images/icon-star.svg" alt="" class="reviews__star">
-              <img src="/images/icon-star.svg" alt="" class="reviews__star">
-              <img src="/images/icon-star.svg" alt="" class="reviews__star">
-              <img src="/images/icon-star.svg" alt="" class="reviews__star">
+              <img src="images/icon-star.svg" alt="" class="reviews__star">
+              <img src="images/icon-star.svg" alt="" class="reviews__star">
+              <img src="images/icon-star.svg" alt="" class="reviews__star">
+              <img src="images/icon-star.svg" alt="" class="reviews__star">
+              <img src="images/icon-star.svg" alt="" class="reviews__star">
             </div>
             <p class="reviews__text">Rated 5 Stars in BestTech</p>
           </article>
@@ -76,7 +76,7 @@
         <!-- Testimonial Card #1 -->
         <article class="testimonials__card">
           <div class="testimonials__card__user-info">
-            <img src="/images/image-colton.jpg" alt="" class="testimonials__card__user-pic">
+            <img src="images/image-colton.jpg" alt="" class="testimonials__card__user-pic">
             <div>
               <p class="testimonials__card__user-name">Colton Smith</p>
               <p class="testimonials__card__user-verified">Verified Buyer</p>
@@ -92,7 +92,7 @@
         <!-- testimonial Card #2 -->
         <article class="testimonials__card">
           <div class="testimonials__card__user-info">
-            <img src="/images/image-irene.jpg" alt="" class="testimonials__card__user-pic">
+            <img src="images/image-irene.jpg" alt="" class="testimonials__card__user-pic">
             <div>
               <p class="testimonials__card__user-name">Irene Roberts</p>
               <p class="testimonials__card__user-verified">Verified Buyer</p>
@@ -107,7 +107,7 @@
         <!-- testimonials Card #3 -->
         <article class="testimonials__card">
           <div class="testimonials__card__user-info">
-            <img src="/images/image-anne.jpg" alt="" class="testimonials__card__user-pic">
+            <img src="images/image-anne.jpg" alt="" class="testimonials__card__user-pic">
             <div>
               <p class="testimonials__card__user-name">Anne Wallace</p>
               <p class="testimonials__card__user-verified">Verified Buyer</p>
